--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^2.26.0",
     "marked": "^5.1.1",
     "next": "14.0.0",
     "next-seo": "^6.1.0",
